fixed off center contributors heading at 510px

--- a/src/components/AboutUsPage/AboutPage.css
+++ b/src/components/AboutUsPage/AboutPage.css
@@ -235,12 +235,16 @@ vertical-align: middle
         font-size: var(--heading-mobile);
         align-items: center;
     }
+    .gallery-item1 img, .gallery-item2 img {
+        width: 210px;
+        height: 210px;
+    }
     
 
 }
 
 /* Small Mobile View */
-@media (max-width: 440px) {
+@media (max-width: 515px) {
     .about-us {
         padding: 0 20px;
     }
@@ -251,10 +255,7 @@ vertical-align: middle
     }
 
 
-    .gallery-item1 img, .gallery-item2 img {
-        width: 180px;
-        height: 180px;
-    }
+
 
 
     .row-1  {
